# ga

./: .gitattributes  .gitignore  ARCHITECTURAL_ANALYSIS_REFERENCE_VS_REFACTORED.md  BUILD_USAGE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GA_INCLUDE_GUIDE.md  LICENSE.txt  README.md  vcpkg.json
ga/: CMakeLists.txt  README.md  ga.hpp  ga_algebra.hpp  ga_cfg_2d_ops.hpp  ga_cfg_3d_ops.hpp  ga_cfg_bivec3d.hpp  ga_cfg_mvec2d.hpp  ga_cfg_mvec2d_e.hpp  ga_cfg_mvec3d.hpp  ga_cfg_mvec3d_e.hpp  ga_cfg_mvec3d_u.hpp  ga_cfg_pscalar2d.hpp  ga_cfg_pscalar3d.hpp  ga_cfg_scalar.hpp  ga_cfg_value_t.hpp  ga_cfg_vec2d.hpp  ga_cfg_vec3d.hpp  ga_ega.hpp  ga_ega2d_only.hpp  ga_ega2d_ops.hpp  ga_ega2d_ops_basics.hpp  ga_ega2d_ops_products.hpp  ga_ega3d_only.hpp  ga_ega3d_ops.hpp  ga_ega3d_ops_basics.hpp  ga_ega3d_ops_products.hpp  ga_ega_2d_only.hpp  ga_ega_2d_ops.hpp  ga_ega_3d_only.hpp  ga_ega_3d_ops.hpp  ga_minimal.hpp  ga_pga.hpp  ga_pga2dp_only.hpp  ga_pga2dp_ops.hpp  ga_pga2dp_ops_basics.hpp  ga_pga2dp_ops_physics.hpp  ga_pga2dp_ops_products.hpp  ga_pga3dp_only.hpp  ga_pga3dp_ops.hpp  (+18 more)
ga/detail/: ga_algebra.hpp  ga_bivec3d.hpp  ga_bvec6_t.hpp  ga_core_types.hpp  ga_ega_2d_ops.hpp  ga_ega_3d_ops.hpp  ga_ega_types.hpp  ga_error_handling.hpp  ga_fmt_support.hpp  ga_foundation.hpp  ga_mvec16_t.hpp  ga_mvec2d.hpp  ga_mvec2d_e.hpp  ga_mvec2dp.hpp  ga_mvec2dp_e.hpp  ga_mvec2dp_u.hpp  ga_mvec3d.hpp  ga_mvec3d.hpp.bak  ga_mvec3d_e.hpp  ga_mvec3d_u.hpp  ga_mvec3dp.hpp  ga_mvec3dp_e.hpp  ga_mvec3dp_u.hpp  ga_mvec4_t.hpp  ga_mvec4d.hpp  ga_mvec4d_e.hpp  ga_mvec4d_u.hpp  ga_mvec6_t.hpp  ga_mvec8_t.hpp  ga_pga2dp_objects.hpp  ga_pga3dp_objects.hpp  ga_pga_2dp_objects.hpp  ga_pga_2dp_ops.hpp  ga_pga_3dp_objects.hpp  ga_pga_types.hpp  ga_pscalar2d.hpp  ga_pscalar3d.hpp  ga_scalar.hpp  ga_scalar_t.hpp  ga_solver.hpp  (+17 more)
ga_lua/: CMakeLists.txt  ga_lua.cpp  ga_lua.hpp
ga_lua/input/: ga_lua.bak  ga_lua.lua  ga_lua.lua.bak  test_application.lua  test_ega2d.lua  test_ega3d.lua  test_pga2dp.lua  test_pga3dp.lua
ga_lua/scripts/: contraction.lua  expand3d.lua  inversion.lua  reflection.lua  rotate_by_bivec.lua  rotate_ega3d.lua
ga_lua/src/: ga_lua.cpp  ga_lua.hpp
ga_prdxpr/: CMakeLists.txt  README.md
ga_prdxpr/src/: ga_prd_ega2d.cpp  ga_prd_ega2d.hpp  ga_prd_ega2dp.cpp  ga_prd_ega2dp.hpp  ga_prd_ega3d.cpp  ga_prd_ega3d.hpp  ga_prd_pga2dp.cpp  ga_prd_pga2dp.hpp  ga_prd_pga3dp.cpp  ga_prd_pga3dp.hpp  ga_prdexpr_manual.txt  ga_prdxpr_common.cpp  ga_prdxpr_common.hpp  ga_prdxpr_config.hpp  ga_prdxpr_config_ega3d.hpp  ga_prdxpr_config_pga2dp.hpp  ga_prdxpr_config_pga3dp.cpp  ga_prdxpr_ega2d.cpp  ga_prdxpr_ega3d.cpp  ga_prdxpr_ega3d.hpp  ga_prdxpr_main.cpp  ga_prdxpr_main_new.cpp  ga_prdxpr_pga2dp.cpp  ga_prdxpr_pga3dp.cpp  ga_prdxpr_trafo.cpp  ga_prdxpr_trafo.ebnf  ga_prdxpr_trafo.hpp  ga_prdxpr_trafo.hpp.bak  ga_prdxpr_trafo_manual.txt  ga_prdxpr_trafo_test.cpp  ga_prdxpr_transformation.ebnf  ga_prdxpr_transformer-simple.cpp  ga_prdxpr_transformer.cpp  ga_prdxpr_transformer.hpp
ga_prdxpr/src_prdxpr/: all_algebras_product_tables.txt  ega3d_transwedge_products.txt  ga_prdxpr_common.cpp  ga_prdxpr_common.hpp  ga_prdxpr_config_types.hpp  ga_prdxpr_dual_calc.cpp  ga_prdxpr_dual_calc.hpp  ga_prdxpr_ega2d.cpp  ga_prdxpr_ega2d.hpp  ga_prdxpr_ega2d_config.cpp  ga_prdxpr_ega2d_config.hpp  ga_prdxpr_ega3d.cpp  ga_prdxpr_ega3d.hpp  ga_prdxpr_ega3d_config.cpp  ga_prdxpr_ega3d_config.hpp  ga_prdxpr_generator.cpp  ga_prdxpr_generator.hpp  ga_prdxpr_main.cpp  ga_prdxpr_metric_calc.cpp  ga_prdxpr_metric_calc.hpp  ga_prdxpr_metric_export.cpp  ga_prdxpr_metric_export.hpp  ga_prdxpr_options.cpp  ga_prdxpr_options.hpp  ga_prdxpr_pga2dp.cpp  ga_prdxpr_pga2dp.hpp  ga_prdxpr_pga2dp_config.cpp  ga_prdxpr_pga2dp_config.hpp  ga_prdxpr_pga3dp.cpp  ga_prdxpr_pga3dp.hpp  ga_prdxpr_pga3dp_config.cpp  ga_prdxpr_pga3dp_config.hpp  ga_prdxpr_rule_generator.cpp  ga_prdxpr_rule_generator.hpp  ga_prdxpr_rule_generator_test.cpp  ga_prdxpr_sandwich_nary_expression.cpp  ga_prdxpr_sandwich_nary_expression.hpp  ga_prdxpr_sandwich_parser.cpp  ga_prdxpr_sandwich_simplifier.cpp  ga_prdxpr_sandwich_simplifier.hpp  (+10 more)
ga_prdxpr/src_trafo/: ga_prdxpr_trafo.cpp  ga_prdxpr_trafo.hpp  ga_prdxpr_trafo_expr_simplifier.cpp  ga_prdxpr_trafo_expr_simplifier.hpp  ga_prdxpr_trafo_nary_expression.cpp  ga_prdxpr_trafo_nary_expression.hpp  ga_prdxpr_trafo_parser_test.cpp  ga_prdxpr_trafo_sandwich_transformer.cpp  ga_prdxpr_trafo_sandwich_transformer.hpp  ga_prdxpr_trafo_tests.cpp  ga_prdxpr_trafo_tests.hpp  ga_prdxpr_trafo_viscmp.cpp  ga_prdxpr_transformation_manual.txt
ga_py/: CMakeLists.txt  README.md
ga_py/benchmark/: CMakeLists.txt  README.md  gpr_overhead_bench.cpp  gpr_overhead_bench.py  gpr_overhead_results_debug.txt  gpr_overhead_results_debug_windows.txt  gpr_overhead_results_release.txt  gpr_overhead_results_release_windows.txt  numpy_interop_bench.py  results_debug.txt  results_debug_windows.txt  results_release.txt  results_release_windows.txt
ga_py/demo/: hello_ga.py  intersecting_discs.py  plate_pendulum.py  tumbling_plane.py
ga_py/src/: bindings_physics.cpp  bindings_rk4_step.cpp  module.cpp
ga_py/tests/: conftest.py  test_constants.py  test_coverage.py  test_cross_check.py  test_grade_lookup.py  test_identities_ega.py  test_identities_pga.py  test_multivectors.py  test_numpy_interop.py  test_pga_primitives.py  test_physics.py  test_rk4_step.py  test_scalars.py  test_stubs.py  test_vec3d.py
ga_test/: CMakeLists.txt  ga_test.cpp
ga_test/src/: export_python_cases.cpp  ga_2d_2dp_compare_test.cpp  ga_appl2d_2dp_cmp_test.hpp  ga_appl2dp_2d_cmp_test.hpp  ga_appl2dp_appl_test.hpp  ga_appl2dp_physics_test.hpp  ga_appl2dp_test.cpp  (+26 more)
ga_view/: CMakeLists.txt  active_bivec.cpp  active_bivec.hpp  active_common.cpp  active_common.hpp  active_plane.cpp  active_plane.hpp  active_projection.cpp  active_projection.hpp  active_pt.cpp  active_pt.hpp  active_reflection.cpp  active_reflection.hpp  active_vec.cpp  active_vec.hpp  main.cpp  w_common.cpp  w_common.hpp  w_coordsys.cpp  w_coordsys.hpp  w_mainwindow.cpp  w_mainwindow.hpp  w_statusbar.cpp  w_statusbar.hpp
(+293 files in other folders)
