# incrementally add test files needed

set(LIB_NAME ga)

set(HEADERS
    #
    detail/fmt/ga_fmt_core.hpp
    detail/fmt/ga_fmt_ega.hpp
    detail/fmt/ga_fmt_pga.hpp
    detail/ga_fmt_support.hpp
    #
    detail/ga_error_handling.hpp
    detail/ga_core_types.hpp
    detail/ga_foundation.hpp
    detail/ga_ega_types.hpp
    detail/ga_pga_types.hpp
    #
    detail/type_t/ga_scalar_t.hpp
    detail/type_t/ga_vec2_t.hpp
    detail/type_t/ga_vec3_t.hpp
    detail/type_t/ga_vec4_t.hpp
    detail/type_t/ga_bvec6_t.hpp
    detail/type_t/ga_mvec2_t.hpp
    detail/type_t/ga_mvec4_t.hpp
    detail/type_t/ga_mvec8_t.hpp
    detail/type_t/ga_mvec16_t.hpp
    detail/type_t/ga_type_tags.hpp
    detail/type_t/ga_type2d.hpp
    detail/type_t/ga_type2dp.hpp
    detail/type_t/ga_type3d.hpp
    detail/type_t/ga_type3dp.hpp
    detail/type_t/ga_type4d.hpp
    #
    detail/ga_mvec2d.hpp
    detail/ga_mvec2d_e.hpp
    #
    detail/ga_mvec3d.hpp
    detail/ga_mvec3d_e.hpp
    detail/ga_mvec3d_u.hpp
    #
    detail/ga_mvec4d.hpp
    detail/ga_mvec4d_e.hpp
    detail/ga_mvec4d_u.hpp
    #
    detail/ga_mvec2dp.hpp
    detail/ga_mvec2dp_e.hpp
    detail/ga_mvec2dp_u.hpp
    #
    detail/ga_mvec3dp.hpp
    detail/ga_mvec3dp_e.hpp
    detail/ga_mvec3dp_u.hpp
    #
    # user facing includes
    #
    ga_minimal.hpp
    ga_ega.hpp
    ga_pga.hpp
    #
    ga_ega2d_only.hpp
    ga_ega3d_only.hpp
    ga_pga2dp_only.hpp
    ga_pga3dp_only.hpp
    #
    ga_usr_consts.hpp
    ga_usr_types.hpp
    ga_usr_utilities.hpp
    ga_algebra.hpp
    ga_value_t.hpp
    #
    ga_ega2d_ops.hpp
    ga_ega3d_ops.hpp
    #
    detail/ga_pga2dp_objects.hpp
    ga_pga2dp_ops.hpp
    #
    detail/ga_pga3dp_objects.hpp
    ga_pga3dp_ops.hpp
    #
    ga_pga_common_ops.hpp
    )

add_library(${LIB_NAME} INTERFACE ${HEADERS})   #dep: fmt (must be provided by user!)
