# ga_py — Python bindings for the hd::ga library.
#
# Two ways to build:
#
# 1) Top-level (recommended): from the project root,
#       cd build && cmake .. -D_GA_BUILD_PYTHON=ON && cmake --build .
#    This integrates with the rest of the project; nanobind is auto-detected
#    via the Python interpreter found by find_package(Python).
#
# 2) Standalone (for quick iteration on the wrapper alone),
#       cmake -S ga_py -B build/ga_py \
#             -DPython_EXECUTABLE=$(which python3) \
#             -DCMAKE_PREFIX_PATH="$(python3 -c 'import nanobind; print(nanobind.cmake_dir())')"
#       cmake --build build/ga_py

cmake_minimum_required(VERSION 3.28)
project(ga_py LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Project root holds the ga/ headers we bind.
set(GA_PROJECT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/..")

# If the user has a wrapper venv at ga_py/.venv (the documented setup), prefer
# its Python. nanobind lives in that venv too, so the build works with no
# extra flags. The user can override by passing -DPython_EXECUTABLE explicitly.
if(NOT Python_EXECUTABLE)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.venv/bin/python")
        set(Python_EXECUTABLE "${CMAKE_CURRENT_SOURCE_DIR}/.venv/bin/python")
        message(STATUS "ga_py: using wrapper venv Python at ${Python_EXECUTABLE}")
    elseif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.venv/Scripts/python.exe")  # Windows
        set(Python_EXECUTABLE "${CMAKE_CURRENT_SOURCE_DIR}/.venv/Scripts/python.exe")
        message(STATUS "ga_py: using wrapper venv Python at ${Python_EXECUTABLE}")
    endif()
endif()

find_package(Python 3.10 REQUIRED COMPONENTS Interpreter Development.Module)

# Auto-discover nanobind via the Python interpreter we just located. This lets
# the top-level build work with no extra flags --- as long as `pip install
# nanobind` has happened in that interpreter, find_package(nanobind) succeeds.
if(NOT nanobind_DIR)
    execute_process(
        COMMAND "${Python_EXECUTABLE}" -c
                "import nanobind; print(nanobind.cmake_dir())"
        OUTPUT_VARIABLE _nanobind_cmake_dir
        OUTPUT_STRIP_TRAILING_WHITESPACE
        RESULT_VARIABLE _nanobind_lookup_result
        ERROR_QUIET
    )
    if(_nanobind_lookup_result EQUAL 0 AND IS_DIRECTORY "${_nanobind_cmake_dir}")
        set(nanobind_DIR "${_nanobind_cmake_dir}" CACHE PATH "nanobind cmake dir")
        message(STATUS "ga_py: auto-detected nanobind at ${nanobind_DIR}")
    else()
        message(FATAL_ERROR
            "ga_py: nanobind not found via ${Python_EXECUTABLE}. "
            "Install it with: ${Python_EXECUTABLE} -m pip install nanobind")
    endif()
endif()
find_package(nanobind CONFIG REQUIRED)

# fmt is required by the generated bindings (for __repr__/__str__).
# In the rest of the project fmt is found via brew/vcpkg; for the spike build
# we accept it via CMAKE_PREFIX_PATH or system paths.
find_package(fmt QUIET)

# Pull in the generated list of binding sources (one per user type plus
# register_all.cpp). The list is regenerated by ga_bindgen whenever new
# types are added; contributors must commit it alongside the .cpp files.
include("${CMAKE_CURRENT_SOURCE_DIR}/src/generated/bindings_list.cmake")

# Build the extension module. Naming: NB_MODULE(_ga_py, ...) → file _ga_py.so.
nanobind_add_module(_ga_py
    NB_STATIC
    src/module.cpp
    ${GA_PY_GENERATED_SOURCES}
)

target_include_directories(_ga_py PRIVATE
    "${GA_PROJECT_ROOT}"           # so #include "ga/ga_ega.hpp" resolves
)

target_compile_definitions(_ga_py PRIVATE
    FMT_HEADER_ONLY=1              # match the rest of the project
    _HD_GA_EXTENDED_TEST_DIV_BY_ZERO
)

# fmt include dir: prefer the imported target if found, otherwise rely on
# system include paths discovered by the compiler.
if(fmt_FOUND)
    target_link_libraries(_ga_py PRIVATE fmt::fmt-header-only)
else()
    # macOS homebrew fallback — keeps the spike build runnable without vcpkg.
    if(EXISTS "/opt/homebrew/include/fmt/format.h")
        target_include_directories(_ga_py PRIVATE "/opt/homebrew/include")
    endif()
endif()

# Install so the module sits next to the package when packaged with wheels.
install(TARGETS _ga_py LIBRARY DESTINATION ga_py)
install(DIRECTORY python/ga_py DESTINATION .)
